target/debug/build/eyre-5cd26c6c760f06c5/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/marcintha/workspace/jiemi/target/debug/build/eyre-5cd26c6c760f06c5/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
